# malloc_new

./: CMakeLists.txt  README.md
docs/: API_Implementation_and_Testing.md
examples/: no_cmake_basic_demo.cpp
include/malloc_new/: allocator.hpp
src/: compat.cpp  huge_page_allocator.cpp
tests/: integrity_tests.cpp  jemalloc_port_tests.cpp  latency_bench.cpp  smoke_tests.cpp  tcmalloc_port_tests.cpp
tools/: run_tests.sh
